src/test/ui/parser/issue-14303-impl.stderr
error: lifetime parameters must be declared prior to type parameters
  --> $DIR/issue-14303-impl.rs:5:13
   |
LL | impl<'a, T, 'b> X {}
   |             ^^
help: move the lifetime parameter prior to the first type parameter
   |
LL | impl<'a, 'b, T> X {}
   |          ^^^ --

error: aborting due to previous error

